<resources>
    <string name="app_name">GoodWeather</string>
    <string name="login_please">Log in, please</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="have_not_account">Don\'t have an account? Sign up!</string>
    <string name="version">Version: 1.1</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_please">Sign up, please</string>
    <string name="have_account">Already have an account? Log in!</string>
    <string name="no_email">Enter you email</string>
    <string name="no_password">Enter you password</string>
    <string name="short_password">Your password is very short! Minimum number of characters: 6.</string>
    <string name="long_password">Your password is very long! Maximum number of characters: 14.</string>
    <string name="sign_up_success">Sign up is success</string>
    <string name="sign_up_error">Sign up error</string>
    <string name="you_already_authorized">You already authorized</string>
    <string name="log_in_failed">Sign in is failed</string>
    <string name="btn_bottom_toolbar_today">Today</string>
    <string name="btn_bottom_toolbar_in_location">In location</string>
    <string name="btn_bottom_toolbar_for_week">For week</string>
    <string name="success">Success</string>
    <string name="successTag">SUCCESS</string>
    <string name="fail">fail</string>
    <string name="not_have_permission_GPS">You have not given permission to use GPS</string>
    <string name="turn_location">Please Turn on Your device Location</string>
    <string name="send_city_name">send city name</string>
    <string name="kazzak_technology_corporation">KaZZaK Technology corporation (c)</string>
    <string name="degree">℃</string>
    <string name="feels_like">Feels like</string>
    <string name="temperature_min">Temperature min</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_max">Temperature max</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="mbar">mbar</string>
    <string name="per">%</string>
    <string name="km_in_hour">km/h</string>
</resources>