<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/good_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_weather"
        android:textSize="@dimen/dimens_40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimens_20dp"/>

    <TextView
        android:id="@+id/login_please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_please"
        android:textSize="@dimen/dimens_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/good_weather"
        android:layout_marginTop="@dimen/dimens_20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_please"
        android:layout_margin="@dimen/dimens_20dp">

        <TextView
            android:id="@+id/enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email"
            app:layout_constraintLeft_toRightOf="@+id/mail_img"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimens_20dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mail_img"
            android:layout_width="@dimen/dimens_40dp"
            android:layout_height="@dimen/dimens_40dp"
            android:src="@drawable/ic_baseline_mail_outline_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@id/enter_email"
            app:layout_constraintTop_toBottomOf="@id/enter_email"
            android:layout_marginStart="@dimen/dimens_20dp"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="@dimen/dimens_40dp"
            app:layout_constraintLeft_toRightOf="@id/mail_img"
            app:layout_constraintTop_toBottomOf="@id/enter_email"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/dimens_20dp"
            android:hint="@string/enter_your_email"/>

        <TextView
            android:id="@+id/enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_password"
            app:layout_constraintLeft_toRightOf="@+id/mail_img"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text"
            android:layout_marginTop="@dimen/dimens_20dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/password_img"
            android:layout_width="@dimen/dimens_40dp"
            android:layout_height="@dimen/dimens_40dp"
            android:src="@drawable/ic_baseline_lock_open_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@id/enter_email"
            app:layout_constraintTop_toBottomOf="@id/enter_password"
            android:layout_marginStart="@dimen/dimens_20dp"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="@dimen/dimens_40dp"
            app:layout_constraintLeft_toRightOf="@id/password_img"
            app:layout_constraintTop_toBottomOf="@id/enter_password"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/dimens_20dp"
            android:hint="@string/enter_your_password"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="@dimen/dimens_100dp"
            android:layout_height="@dimen/dimens_40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:text="@string/log_in"
            android:layout_marginBottom="@dimen/dimens_20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/have_not_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_not_account"
        app:layout_constraintTop_toBottomOf="@+id/login_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimens_20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/dimens_100dp"
        android:layout_height="@dimen/dimens_40dp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/have_not_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dimens_20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>