<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type = "android.view.View"/>
        <variable
            name="signUpFragment"
            type="com.example.goodweather.presentation.fragments.SignUpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:text="@string/good_weather"
            android:textSize="@dimen/dimens_40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSignUpPlease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:text="@string/sign_up_please"
            android:textSize="@dimen/dimens_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignUpPlease">

            <TextView
                android:id="@+id/tvHintWhenEdtEmailActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:text="@string/enter_your_email"
                app:layout_constraintLeft_toRightOf="@+id/ivMail"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:src="@drawable/ic_baseline_mail_outline_24"
                app:layout_constraintRight_toLeftOf="@id/tvHintWhenEdtEmailActive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHintWhenEdtEmailActive" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="0dp"
                android:hint="@string/enter_your_email"
                android:layout_marginEnd="@dimen/dimens_20dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivMail"
                app:layout_constraintLeft_toRightOf="@id/ivMail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHintWhenEdtEmailActive" />

            <TextView
                android:id="@+id/tvHintWhenEdtPasswordActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:text="@string/enter_your_password"
                app:layout_constraintLeft_toRightOf="@+id/ivMail"
                app:layout_constraintTop_toBottomOf="@id/edtEmail" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_20dp"
                android:src="@drawable/ic_baseline_lock_open_24"
                app:layout_constraintRight_toLeftOf="@id/tvHintWhenEdtEmailActive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHintWhenEdtPasswordActive" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/enter_your_password"
                android:layout_marginEnd="@dimen/dimens_20dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivLock"
                app:layout_constraintLeft_toRightOf="@id/ivLock"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHintWhenEdtPasswordActive" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:layout_marginBottom="@dimen/dimens_20dp"
                android:text="@string/sign_up"
                android:onClick="@{(view) -> signUpFragment.signUp()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvHintForBtnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:text="@string/have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{(view) -> signUpFragment.moveLoginFragment()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHintForBtnLogIn" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_20dp"
            android:text="@string/version"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>