<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type = "android.view.View"/>
        <variable
            name="weatherInLocationFragment"
            type="com.example.goodweather.presentation.fragments.WeatherInLocationFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Vitebsk, BY" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWeather"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="@dimen/dimens_2dp"
            android:scaleType="center"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"/>

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_40sp"
            android:layout_marginTop="@dimen/dimens_2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivWeather"
            tools:text="25"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimens_16sp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/dimens_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTemperature"
            tools:text="overcast clouds"/>

        <LinearLayout
            android:id="@+id/llMainLiner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/button_background"
            android:layout_margin="@dimen/dimens_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/button_background"
                android:layout_margin="@dimen/dimens_10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_like"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_min"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_max"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/button_background"
                android:layout_margin="@dimen/dimens_10dp">

                <TextView
                    android:id="@+id/tvFeelsLike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"
                    tools:text="17"/>
                <TextView
                    android:id="@+id/tvTempMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"
                    tools:text="15"/>
                <TextView
                    android:id="@+id/tvTempMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"
                    tools:text="18"/>
                <TextView
                    android:id="@+id/tvPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"
                    tools:text="1014"/>
                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"
                    tools:text="101"/>
                <TextView
                    android:id="@+id/tvWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimens_16sp"
                    android:textColor="@color/black"
                    tools:text="1.21"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            android:backgroundTint="@color/button_background"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{(view) -> weatherInLocationFragment.getWeather()}"
            android:layout_marginStart="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llMainLiner" />

        <EditText
            android:id="@+id/edtCity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:hint="@string/send_city_name"
            android:backgroundTint="@color/black"
            android:layout_marginEnd="@dimen/dimens_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSearch"
            app:layout_constraintTop_toTopOf="@id/btnSearch"
            app:layout_constraintBottom_toBottomOf="@id/btnSearch"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>